--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "rda_python_template"
-version = "1.0.0"
+name = "rda_python_dsupdt"
+version = "1.0.1"
 authors = [
   { name="Zaihua Ji", email="zji@ucar.edu" },
 ]
-description = "RDA Python code template to create new and modify existing other RDA python packages"
+description = "RDA Python Package to update RDA operational datasets"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -28,10 +28,10 @@ include-package-data = true
 where = ["src"]
 
 [tool.setuptools.package-data]
-"rda_python_tmplate" = ["hello_workd.usg"]
+"rda_python_dsupdt" = ["dsupdt.usg"]
 
 [project.urls]
-"Homepage" = "https://github.com/NCAR/rda-python-template"
+"Homepage" = "https://github.com/NCAR/rda-python-dsupdt"
 
 [project.scripts]
-hello_world = "rda_python_template.hello_world:main"
+dsupdt = "rda_python_dsupdt.dsupdt:main"
