--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,10 @@
 [build-system]
-requires = [
-  "setuptools>=61.0",
-  "rda_python_common",
-]
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "rda_python_dsupdt"
-version = "1.0.1"
+version = "1.0.2"
 authors = [
   { name="Zaihua Ji", email="zji@ucar.edu" },
 ]
@@ -19,6 +16,10 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Development Status :: 5 - Production/Stable",
+]
+dependencies = [
+  "rda_python_common",
+  "rda_python_dsarch",
 ]
 
 [tool.setuptools]
